--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.10.0",
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-firebase-hooks": "^5.1.1",
+    "use-sound": "^4.0.1"
   }
 }
